# Concurrent-File-Tree

./: CMakeLists.txt  README.md  task_description.md
src/: CMakeLists.txt  HashMap.c  HashMap.h  Tree.c  Tree.h  err.c  err.h  main.c  mtwister.c  mtwister.h  path.c  path.h  path_utils.c  path_utils.h  safe_allocations.h  test.c
src/tests/: .gitignore  LICENSE  README.md  deadlock.c  liveness.c  sequential_big_random.c  sequential_small.c  test.c  utils.c  valid_path.c
